--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,15 @@
          "mode": "debug",
          "program": "${workspaceFolder}/cmd/main/main.go",
          "console": "integratedTerminal"
-      }         
+      },
+      {
+         "name": "Launch main with args",
+         "type": "go",
+         "request": "launch",
+         "mode": "debug",
+         "program": "${workspaceFolder}/cmd/main/main.go",
+         "args":["run","log"],
+         "console": "integratedTerminal"
+      }             
    ]
 }
